s3: smbd: SMB2 close. Add utility function setup_close_full_information()

Not yet used.

Bug 11104 - SMB2/SMB3 close response does not include attributes when requested.

https://bugzilla.samba.org/show_bug.cgi?id=11104

Signed-off-by: Jeremy Allison <jra@samba.org>
Reviewed-by: Steve French <sfrench@samba.org>
(cherry picked from commit 2ccfdf760e4adcf25d59c629c9d6d6b31a10a9f1)